--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,4 +1,7 @@
-v4.13.25.0 (2020-09-02)
+v4.13.27.0 (2020-09-03)
+- Fixed: Issue form crashing when Virtual Driver is installed or uninstalled.
+
+v4.13.25.0 (2020-09-03)
 - Fixed: Crash when game is not selected.
 - Fixed: Crash when recording stopped with (Escape key).
 - Fixed: Fixing some multi-threading exceptions.
