--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,7 @@
+v4.13.29.0 (2020-09-05)
+- Fixed: Crash during user internal settings update.
+- Fixed: Freezing during interface update.
+
 v4.13.27.0 (2020-09-03)
 - Fixed: Issue form crashing when Virtual Driver is installed or uninstalled.
 - Fixed: Crash when game is not selected.
