--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,8 +1,9 @@
-v4.13.33.0 (2020-09-07)
+v4.13.34.0 (2020-09-09)
 - Fixed: Crash during user internal settings update.
 - Fixed: Crash during XInput devices update.
 - Fixed: Freezing during interface update.
 - Update: Add option to show [Test...] developing button, which is hidden by default.
+- Update: Clean errors log folder if app version changed.
 
 v4.13.27.0 (2020-09-03)
 - Fixed: Issue form crashing when Virtual Driver is installed or uninstalled.
