--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,9 @@
+v4.13.41.0 (2020-09-10)
+- Fixed: Crash when DirectInput helper starts before full form initialization.
+- Fixed: Crash when UserSettings list updates PAD Grid from another thread.
+- Fixed: Crash when UserDevice removed on another thread.
+- Updated: DeviceDetector which would crash when retrieving device name.
+
 v4.13.35.0 (2020-09-09)
 - Fixed: Crash during user internal settings update.
 - Fixed: Crash during XInput devices update.
