--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,5 +1,6 @@
-v4.13.43.0 (2020-09-14)
+v4.13.45.0 (2020-09-16)
 - Fixed: Check HID Guardian installation and help to install.
+- Updated: Automatically hide mapped DirectInput controllers and show unmapped.
 - Updated: Shared Classes.
 
 v4.13.41.0 (2020-09-10)
