--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,6 @@
+v4.14.9.0 (2020-09-21)
+- Fixed: App configuration, which will ask for elevated permissions properly.
+
 v4.14.8.0 (2020-09-20)
 - Fixed: Ask administrative permission for app for hiding/unhiding controllers.
 - Fixed: Hide and unhide correct controllers on app start and shutdown.
