--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,6 @@
+v4.14.15.0 (2020-10-10)
+- Fixed: Crash when configuring HID Guardian when Device Id is missing.
+
 v4.14.14.0 (2020-10-08)
 - Fixed: Crash when adding new device to map.
 - Fixed: Crash when loading settings.
