--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,5 +1,5 @@
-v4.14.16.0 (2020-10-11)
-- Fixed: Device list won't update after adding or removing demo test device.
+v4.15.6.0 (2020-10-17)
+- Updated: PAD status control updated to more modern XAML format.
 
 v4.14.15.0 (2020-10-10)
 - Fixed: Crash when configuring HID Guardian when Device Id is missing.
