--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,5 +1,7 @@
-v4.15.6.0 (2020-10-17)
+v4.15.8.0 (2020-10-18)
 - Updated: PAD status control updated to more modern XAML format.
+- Updated: Set XInput negative center value (-1) to 0.
+- New: Feature to record mapping by pressing on button image.
 
 v4.14.15.0 (2020-10-10)
 - Fixed: Crash when configuring HID Guardian when Device Id is missing.
