--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,8 +1,9 @@
-v4.15.11.0 (2020-10-18)
+v4.15.13.0 (2020-10-18)
 - Fix: Map recorded was mapping POV direction to DPad instead of POV.
 - Fix: Map recorder was mapping half or inverted axis incorrectly.
 - Updated: PAD status control updated to more modern XAML format.
 - Updated: Set XInput negative center value (-1) to 0.
+- Updated: Limit error files to 10 files per 10 seconds for a different error.
 - New: Feature to record mapping by pressing on button image.
 - New: Remap All feature, which allows faster remapping.
 
