--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,5 +1,5 @@
 v4.15.16.0 (2020-10-19)
-- Fix: Map recorded was mapping POV direction to DPad instead of POV.
+- Fix: Map recorder was mapping POV direction to DPad instead of POV.
 - Fix: Map recorder was mapping half or inverted axis incorrectly.
 - Updated: PAD status control updated to more modern XAML format.
 - Updated: Set XInput negative center value (-1) to 0.
