--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,6 +1,7 @@
-v4.15.18.0 (2020-10-21)
+v4.15.19.0 (2020-10-21)
 - Fix: Crash when UserDevice list updating.
 - Update: Make missing HID Guardian a moderate (optional) issue, which won't prevent UI to load.
+- Update: Redirect HID Guardian [Install] button to install form with warnings and instructions.
 
 v4.15.16.0 (2020-10-19)
 - Fix: Map recorder was mapping POV direction to DPad instead of POV.
